# todo-app-flask

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py
src/domain/: task.py  task_service_impl.py
src/domain/ports/input/: task_service.py
src/domain/ports/output/: task_repository.py
src/domain/utils/validators/: __init__.py  numeric_values.py  text_values.py
src/infraestructure/adapters/output/: task_repository.py
src/infraestructure/database/alembic/: env.py
src/infraestructure/entities/: __init__.py  task_entity.py
src/presentation/http/v1/: task_controller.py
src/presentation/http/v1/doc/: doc.py
